--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde = { version = "1.0.134", features = ["derive"] }
+serde_json = "1.0.77"
+walkdir = "2.3.2"
+chrono = { version = "0.4.23", features = ["serde"] }
+markdown = "1.0.0-alpha.11"
