--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,11 @@ serde_json = "1.0.77"
 walkdir = "2.3.2"
 chrono = { version = "0.4.23", features = ["serde"] }
 markdown = "1.0.0-alpha.11"
+
+[dev-dependencies]
+tokio = { version = "1.29.1", features = ["full"] }
+tera = "1.15.0"
+rocket = "0.5.0-rc.1"
+rocket_codegen = "0.4.4"
+rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
+lazy_static = "1.4.0"
