--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,10 @@
 name = "blog-tools"
 version = "0.0.2"
 edition = "2021"
-authors = ["Nathaniel Curnick <nathaniel.curnick@gmail.com>"]
+authors = ["Indigo Curnick <indigocurnick@gmail.com>"]
 description = "A collection of tools that helps make blogs in Rust"
 readme = "README.md"
-repository = "https://github.com/NathanielCurnick/blog-tools"
+repository = "https://github.com/IndigoCurnick/blog-tools"
 license = "MIT"
 keywords = ["blog", "website", "rocket", "templates"]
 categories = ["web-programming"]
