--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ walkdir = "2.3.2"
 chrono = { version = "0.4.23", features = ["serde"] }
 markdown = "1.0.0-alpha.11"
 tl = "0.7.8"
+xml = "0.8.20"
 
 
 [dev-dependencies]
